fix: issue related with viewport resizing Created a canvas-frame element that wraps the frame of the canvas. This way it's easier to manage the perfect size of the canvas.

--- a/examples/web/index.css
+++ b/examples/web/index.css
@@ -54,6 +54,10 @@ p {
     text-align: center;
 }
 
+.main > .side-left .canvas-container {
+    max-width: 100%;
+}
+
 .main > .side-left .canvas-container.fullscreen {
     align-items: center;
     background-color: #2d2d2d;
@@ -83,23 +87,23 @@ p {
     display: block;
 }
 
-.main > .side-left .canvas-container > .canvas {
+.main > .side-left .canvas-container > .canvas-frame {
     background-color: #1b1a17;
     border: 2px solid #50cb93;
+    font-size: 0px;
     margin-top: 76px;
-    max-width: 100%;
-    width: 640px;
-    height: 320px;
+    max-width: 660px;
     padding: 8px 8px 8px 8px;
 }
 
 @media only screen and (max-width: 1120px) {
-    .main > .side-left .canvas-container > .canvas {
+    .main > .side-left .canvas-container > .canvas-frame {
         margin-top: 12px;
     }
 }
 
-.main > .side-left .canvas-container.fullscreen > .canvas {
+.main > .side-left .canvas-container.fullscreen > .canvas-frame {
+    background-color: transparent;
     border: none;
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.24);
     -o-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.24);
@@ -108,7 +112,12 @@ p {
     -khtml-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.24);
     -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.24);
     margin: 0px 0px 0px 0px;
+    max-width: unset;
     padding: 0px 0px 0px 0px;
+}
+
+.main > .side-left .canvas-container > .canvas-frame > .canvas {
+    width: 100%;
 }
 
 .main > .side-right {
@@ -195,8 +204,8 @@ p {
     background-color: black;
     height: 0px;
     left: 0px;
-    pointer-events: none;
     padding: 0px 24px 0px 24px;
+    pointer-events: none;
     position: fixed;
     text-align: center;
     top: 0px;
@@ -389,7 +398,7 @@ p {
     width: 100%;
 }
 
-.tiny-button.file > input[type="file"]::-webkit-file-upload-button  {
+.tiny-button.file > input[type="file"]::-webkit-file-upload-button {
     cursor: pointer;
 }
 
